// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaModel add + move patch generation add + move + remove moved field generates only add patch when moved field is then removed 1`] = `
[
  {
    "fieldName": "nested",
    "patch": {
      "op": "add",
      "path": "/properties/nested",
      "value": {
        "additionalProperties": false,
        "properties": {},
        "required": [],
        "type": "object",
      },
    },
    "propertyChanges": [],
  },
  {
    "fieldName": "sum",
    "patch": {
      "op": "remove",
      "path": "/properties/sum",
    },
    "propertyChanges": [],
  },
]
`;

exports[`SchemaModel add + move patch generation add + move + remove new parent generates only remove patch when new parent with moved children is removed 1`] = `
[
  {
    "fieldName": "sum",
    "patch": {
      "op": "remove",
      "path": "/properties/sum",
    },
    "propertyChanges": [],
  },
]
`;

exports[`SchemaModel add + move patch generation move field into newly created parent generates add + move for multiple fields moved into new parent 1`] = `
[
  {
    "fieldName": "group",
    "patch": {
      "op": "add",
      "path": "/properties/group",
      "value": {
        "additionalProperties": false,
        "properties": {},
        "required": [],
        "type": "object",
      },
    },
    "propertyChanges": [],
  },
  {
    "fieldName": "group.a",
    "isRename": undefined,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/a",
      "op": "move",
      "path": "/properties/group/properties/a",
    },
    "propertyChanges": [],
  },
  {
    "fieldName": "group.b",
    "isRename": undefined,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/b",
      "op": "move",
      "path": "/properties/group/properties/b",
    },
    "propertyChanges": [],
  },
]
`;

exports[`SchemaModel add + move patch generation move field into newly created parent generates add + move when moving field into new parent 1`] = `
[
  {
    "fieldName": "nested",
    "patch": {
      "op": "add",
      "path": "/properties/nested",
      "value": {
        "additionalProperties": false,
        "properties": {},
        "required": [],
        "type": "object",
      },
    },
    "propertyChanges": [],
  },
  {
    "fieldName": "nested.sum",
    "isRename": undefined,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/sum",
      "op": "move",
      "path": "/properties/nested/properties/sum",
    },
    "propertyChanges": [],
  },
]
`;
